<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity"
    android:background="#ECFBFA">


    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        app:itemBackground="@color/colorAccent"
        app:itemIconTint="@drawable/selector"
        app:itemTextColor="@drawable/selector"
        app:menu="@menu/menu_navigation" />


    <ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-3940256099942544/6300978111">
    </com.google.android.gms.ads.AdView>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewpager"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:src="@drawable/academy" />
    <LinearLayout
        android:id="@+id/SliderDots"
        android:orientation="horizontal"
        android:gravity="center_vertical|center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        tools:ignore="UselessParent"
        android:background="@drawable/for_homepage"
        >

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/rocket"
            android:layout_alignParentEnd="true"
            android:paddingTop="16dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/macondo_swash_caps"
            android:padding="16dp"
            android:text="@string/free_study_material"
            android:textColor="#000000"
            android:textSize="20sp" />

        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginStart="20dp"
            android:text="@string/checkout_some_free_resources_like_notes_nvideos_and_tests_added_by_your_institute"/>

        <TextView
            android:id="@+id/etdirect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="110dp"
            android:text="View Study Materials !"
            android:textColor="#00C853"
            android:textSize="15sp" />


    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rlProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/for_homepage"
        android:layout_margin="15dp">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/profile12"
            android:layout_alignParentEnd="true"
            android:padding="16dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/macondo_swash_caps"
            android:padding="16dp"
            android:text="Profile Update !"
            android:textColor="#000000"
            android:textSize="20sp" />

        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginStart="20dp"
            android:text="@string/complete_your_profile_to_know_you_better_by_updating_information"/>

        <TextView
            android:id="@+id/etprofile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="110dp"
            android:text="Complete Now 1"
            android:textColor="#00C853"
            android:textSize="15sp" />

    </RelativeLayout>

    <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/for_homepage"
                tools:ignore="UselessParent"
        android:layout_margin="15dp"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="20dp"
                    android:paddingTop="30dp"
                    android:text="@string/let_your_friends_know_how_much_you_enjoy_this_app"
                    android:textColor="#00B59C"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/bangers"
                    android:gravity="center"
                    android:text="Share the App"
                    android:textColor="#028A78"
                    android:textSize="36sp"
                    android:textStyle="bold|italic" />

                <ImageView
                    android:id="@+id/share"
                    android:layout_width="100dp"
                    android:layout_height="80dp"
                    android:layout_marginLeft="150dp"
                    android:layout_marginTop="50dp"
                    android:src="@drawable/share"
                    android:textColor="@color/design_default_color_secondary_variant"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </RelativeLayout>

    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        ads:adSize="BANNER"
        android:layout_marginBottom="50dp"
        ads:adUnitId="ca-app-pub-3940256099942544/6300978111">
    </com.google.android.gms.ads.AdView>

</LinearLayout>
</ScrollView>


</RelativeLayout>

