<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Home.AddFiles"
    android:background="#DAFAF7">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="152dp">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:background="@drawable/borderline"
                android:padding="12dp">


                <Spinner
                    android:id="@+id/spinner1"
                    android:layout_width="230dp"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:entries="@array/class_arrays"
                    android:prompt="@string/pattern_prompt" />

                <View
                    android:layout_width="200dp"
                    android:layout_height="2dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="35dp"
                    android:background="@color/colorAccent" />

                <Spinner
                    android:id="@+id/spinner2"
                    android:layout_width="230dp"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="50dp"
                    android:entries="@array/pattern_arrays"
                    android:prompt="@string/pattern_prompt" />

                <View
                    android:layout_width="200dp"
                    android:layout_height="2dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="85dp"
                    android:background="@color/colorAccent" />

                <Spinner
                    android:id="@+id/spinner3"
                    android:layout_width="230dp"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="100dp"
                    android:entries="@array/subject_arrays"
                    android:prompt="@string/subject_prompt" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="50dp"
                    android:src="@drawable/pdf" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:fontFamily="@font/bangers"
                    android:gravity="center"
                    android:text="For uploading pdf file click below"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/uploadp"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="150dp"
                    android:layout_marginTop="90dp"
                    android:onClick="upload"
                    android:text="upload file" />

                <Button
                    android:id="@+id/choosep"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="150dp"
                    android:layout_marginTop="90dp"
                    android:onClick="choose"
                    android:text="choose" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="20dp">

                    <EditText
                        android:id="@+id/etpdf"
                        android:layout_width="250dp"
                        android:layout_height="wrap_content"
                        android:hint="Enter File Name" />
                </com.google.android.material.textfield.TextInputLayout>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="50dp"
                    android:src="@drawable/video" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/bangers"
                    android:gravity="center"
                    android:text="For uploading Video File click below"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/upload2"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="150dp"
                    android:layout_marginTop="90dp"
                    android:onClick="upload2"
                    android:text="upload file" />

                <Button
                    android:id="@+id/choose3"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="150dp"
                    android:layout_marginTop="90dp"
                    android:onClick="choose"
                    android:text="choose" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="20dp">

                    <EditText
                        android:id="@+id/etvideo"
                        android:layout_width="250dp"
                        android:layout_height="wrap_content"
                        android:hint="Enter File Name" />
                </com.google.android.material.textfield.TextInputLayout>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="50dp"
                    android:src="@drawable/test" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/bangers"
                    android:gravity="center"
                    android:text="For uploading Test click below"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/upload3"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="150dp"
                    android:layout_marginTop="90dp"
                    android:onClick="upload3"
                    android:text="upload file" />

                <Button
                    android:id="@+id/choose4"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="150dp"
                    android:layout_marginTop="90dp"
                    android:onClick="choose"
                    android:text="choose" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="20dp">

                    <EditText
                        android:id="@+id/etTest"
                        android:layout_width="250dp"
                        android:layout_height="wrap_content"
                        android:hint="Enter File Name" />
                </com.google.android.material.textfield.TextInputLayout>

            </RelativeLayout>

            <TextView
                android:id="@+id/usage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/note"
                android:textColor="#D50000"
                android:layout_marginTop="12dp"
              />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>